added tests for TaskTransformer and UserTransformer